--- a/templates/diop/cv.html.twig
+++ b/templates/diop/cv.html.twig
@@ -150,6 +150,10 @@
             <li>Connecter</li>
             <li>Programmer</li>
             <li>Accueillir de la clientèle</li>
+            <li>Aide à la préparation des plats</li>
+            <li>Installation des salles</li>
+            <li>Oganisation d'activités</li>
+            <li>Soin des enfants</li>
         </ul>
     </section>
 
